	src/utils/sha2.cpp, src/CMakeLists.txt, src/Makefile.am,
	src/net/accountserver/accountserver.cpp,
	src/net/accountserver/account.h, src/net/accountserver/account.cpp,
	src/main.cpp: Added password encryption using SHA256.

2008-04-21  David Athay  <ko2fan@gmail.com>

	* src/gui/chat.cpp, src/gui/widgets/tabbedarea.cpp,
	src/gui/widgets/tabbedarea.h: Fixed chat window size issue.

2008-04-20  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/main.cpp: Added --data parameter to be used to specify where to
	get the data from when using --skipupdate.
	* configure.ac, data/Makefile.am, data/fonts/Makefile.am: Fixed
	installing of dejavusans.ttf font.
	* src/gui/chat.h, src/gui/chat.cpp: Merged two maps into one, avoid
	non-const operator[] and check whether channel was found.
	* src/main.cpp, src/net/network.h: Since the connection objects might
	not have been created yet when an exception is thrown, check them for
	0 before calling disconnect on them.

2008-04-19  Yohann Ferreira  <bertram@cegetel.net>

	* src/gui/char_select.cpp: Made the client clean characters
	information to avoid a freeze at relogin with another account.

2008-04-19  Dennis Friis  <peavey@placid.dk>

	* src/Makefile.am: Fix a double entry and add missing files.

2008-04-19  Yohann Ferreira  <bertram@cegetel.net>

	* src/main.h, src/main.cpp, src/net/loginhandler.cpp: Made mislogins
	and misregistrations a little bit less annoying for the user.

2008-04-18  Yohann Ferreira  <bertram@cegetel.net>

	* src/gui/char_select.h, src/gui/char_select.cpp,
	src/gui/unregisterdialog.h, src/gui/unregisterdialog.cpp,
	src/main.cpp, src/main.h, src/logindata.h,
	src/gui/changepassworddialog.h, src/gui/changepassworddialog.cpp,
	src/CMakeLists.txt: Added a change password dialog. State code is to
	be reworked.
	* src/localplayer.h, src/localplayer.cpp: limited keyboard walk message
	flooding to one every 1/10 sec.
	* src/main.h, src/main.cpp, src/net/loginhandler.cpp,