@@ -32,22 +32,14 @@
 
 #include "../../log.h"
 
-void Net::ChatServer::Party::createParty()
-{
-    logger->log("Sending PCMSG_PARTY_CREATE");
-    MessageOut msg(PCMSG_PARTY_CREATE);
-
-    Net::ChatServer::connection->send(msg);
-}
-
 void Net::ChatServer::Party::invitePlayer(const std::string &name)
 {
     logger->log("Sending PCMSG_PARTY_INVITE");
-//    MessageOut msg(PCMSG_GUILD_INVITE);
+    MessageOut msg(PCMSG_PARTY_INVITE);
 
-//    msg.writeString(name);
+    msg.writeString(name);
 
-//    Net::ChatServer::connection->send(msg);
+    Net::ChatServer::connection->send(msg);
 }
 
 void Net::ChatServer::Party::acceptInvite(const std::string &name)
